# many-cord-pass

./: Cargo.toml  README.md  config.yaml  config_obscene.yaml  example_config.yaml
src/: action.rs  button.rs  config.rs  deck.rs  deck_minifb.rs  deck_streamdeck.rs  lib.rs  many_cord_pass.rs  mcp_main.rs  page.rs  terminal.rs
