[package]
name = "many-cord-pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="mcp"
path="src/mcp_main.rs"

[dependencies]
actix-web = "4.0.0-rc.2"
anyhow = "1.0.53"
hidapi = "1.3.2"
serde_yaml = "0.8.23"
streamdeck = "0.5.0"
derivative = "2.2.0"
regex = "1.5.4"
lazy_static = "1.4.0"
crossterm = "0.23.0"
minifb = "0.20.0"

[dependencies.serde]
version = "1.0.136"
features = [ "derive" ]

[dependencies.tokio]
version = "1.16.1"
features = ["full"]
