[package]
name = "many-cord-pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="mcp"
path="src/mcp_main.rs"

[dependencies]
actix-web = "4.0.0-rc.2"
anyhow = "1.0.53"
hidapi = "1.3.2"
serde_yaml = "0.8.23"
streamdeck = "0.5.0"
derivative = "2.2.0"
regex = "1.5.4"
lazy_static = "1.4.0"
crossterm = "0.23.0"
minifb = "0.20.0"
image = "0.24.0"

#reqwest = { version = "0.11", features = ["blocking", "json"] }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1.0"
obws = "0.10.0-beta.2"
clap = { version = "4", features = ["derive"] }
rosc = "0.9.1"

[dependencies.serde]
version = "1.0.136"
features = [ "derive" ]

[dependencies.tokio]
version = "1.16.1"
features = ["full"]
